<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/kus_margin_normal">

        <TextView
            android:id="@+id/sdk_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/org_name"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/kus_margin_normal"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/kus_margin_small"
            android:text="@string/org_api_key" />

        <EditText
            android:id="@+id/org_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/kus_margin_normal"
            android:background="@drawable/rounded_border"
            android:hint="@string/enter_api_key"
            android:inputType="textPassword"
            android:padding="@dimen/kus_margin_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/kus_margin_small"
            android:text="@string/override_business_schedule" />

        <EditText
            android:id="@+id/business_schedule_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/kus_margin_normal"
            android:background="@drawable/rounded_border"
            android:hint="@string/enter_business_schedule_id"
            android:inputType="text"
            android:padding="@dimen/kus_margin_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/kus_margin_small"
            android:text="@string/hide_new_conversation_button" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/hide_new_convo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/kus_margin_normal"
            android:background="@drawable/rounded_border"
            android:hint="@string/hide_new_conversation_button"
            android:padding="@dimen/kus_margin_normal" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/kus_margin_small"
            android:text="@string/set_assistant_id" />

        <EditText
            android:id="@+id/assistant_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/kus_margin_normal"
            android:background="@drawable/rounded_border"
            android:hint="@string/enter_assistant_id"
            android:inputType="text"
            android:padding="@dimen/kus_margin_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/kus_margin_small"
            android:text="@string/set_language" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/kus_margin_normal"
            android:background="@drawable/rounded_border"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/kus_margin_small"
            android:text="@string/set_kb_brand" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/kus_margin_small"
            android:text="@string/set_kb_writeup" />

        <EditText
            android:id="@+id/kb_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/kus_margin_normal"
            android:background="@drawable/rounded_border"
            android:hint="@string/enter_kb_id"
            android:inputType="text"
            android:padding="@dimen/kus_margin_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/kus_margin_small"
            android:text="@string/set_brand_id" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/kus_margin_small"
            android:text="@string/set_brand_writeup" />

        <EditText
            android:id="@+id/brand_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:hint="@string/enter_brand_id"
            android:inputType="text"
            android:padding="@dimen/kus_margin_normal" />

        <Button
            android:id="@+id/launch_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/kus_margin_normal"
            android:paddingStart="@dimen/kus_margin_normal"
            android:paddingEnd="@dimen/kus_margin_normal"
            android:text="@string/launch_sdk" />

    </LinearLayout>
</ScrollView>