<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/kus_margin_normal"
    android:orientation="vertical">

    <Button
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="cancel" />

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/kus_margin_large"
        android:text="@string/describe_current_customer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/kus_margin_small"
        android:text="@string/field_type" />

    <Spinner
        android:id="@+id/field_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kus_margin_normal"
        android:background="@drawable/rounded_border"
        android:padding="10dp" />

    <TextView
        android:id="@+id/custom_key_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/kus_margin_small"
        android:text="@string/custom_field"
        android:visibility="gone" />

    <EditText
        android:id="@+id/custom_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kus_margin_normal"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_custom_field"
        android:inputType="text"
        android:padding="@dimen/kus_margin_normal"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/kus_margin_small"
        android:text="@string/field_value" />

    <EditText
        android:id="@+id/custom_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kus_margin_normal"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_field_value"
        android:inputType="text"
        android:padding="@dimen/kus_margin_normal" />

    <Button
        android:id="@+id/describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/kus_margin_normal"
        android:paddingStart="@dimen/kus_margin_normal"
        android:paddingEnd="@dimen/kus_margin_normal"
        android:text="@string/update" />

</LinearLayout>