<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/kus_margin_normal"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/kus_margin_small"
        android:text="@string/generate_jwt_id" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/kus_margin_small"
        android:background="?attr/colorOnSurface" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/kus_margin_small"
        android:text="@string/enter_secret_key" />

    <EditText
        android:id="@+id/secret_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kus_margin_normal"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_secret_key"
        android:inputType="textPassword"
        android:padding="@dimen/kus_margin_normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/kus_margin_small"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kus_margin_normal"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/kus_margin_normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/kus_margin_small"
        android:text="@string/or" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/kus_margin_small"
        android:text="@string/external_id" />

    <EditText
        android:id="@+id/external_id_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/kus_margin_normal"
        android:background="@drawable/rounded_border"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/kus_margin_normal" />

    <Button
        android:id="@+id/generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/kus_margin_normal"
        android:text="@string/log_in" />

</LinearLayout>